# shcheck-ng

./: .env.example  README.md  pyproject.toml  shcheck_ng.py
shcheck_ng.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
