[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shcheck-ng"
version = "1.0.0"
description = "Modern HTTP Security Header Analyzer with AI & OSINT support"
authors = [{name = "Kevin"}]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "rich>=13.7.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "prettytable>=3.10.0",
    "httpx>=0.27.0"
]

[project.scripts]
shcheck-ng = "shcheck_ng:main"
